--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -277,13 +277,13 @@ These findings can be summarized as in Table \ref{tbl:summary-ohg-matching}. The
           & [\ac{dat}]
           \\ \cmidrule{1-4}
       [\ac{nom}]
-          & \colorbox{LG}{\ac{nom}}
+          & \cellcolor{LG}{\ac{nom}}
           &
           &
           \\ \cmidrule{1-4}
       [\ac{acc}]
           &
-          & \colorbox{DG}{\ac{acc}}
+          & \cellcolor{DG}{\ac{acc}}
           &
           \\ \cmidrule{1-4}
       [\ac{dat}]
@@ -564,13 +564,13 @@ These findings can be summarized as in Table \ref{tbl:summary-mg-matching}. The 
          & [\ac{dat}]
          \\ \cmidrule{1-4}
      [\ac{nom}]
-         & \colorbox{LG}{\ac{nom}}
+         & \cellcolor{LG}{\ac{nom}}
          &
          &
          \\ \cmidrule{1-4}
      [\ac{acc}]
          &
-         & \colorbox{DG}{\ac{acc}}
+         & \cellcolor{DG}{\ac{acc}}
          &
          \\ \cmidrule{1-4}
      [\ac{dat}]
@@ -806,7 +806,26 @@ The dark gray marking corresponds to \ref{ex:mg-dat-acc}, in which the external 
     \label{tbl:case-competition-mg-acc-dat}
 \end{table}
 
-In sum, Modern German is an instance of a language that only allows the internal case to surface. The relative pronoun surfaces in the most complex case, but only when this more complex case is the internal case.
+In sum, Modern German is an instance of a language that only allows the internal case to surface. The relative pronoun surfaces in the most complex case, but only when this more complex case is the internal case.\footnote{Another language of the internal-only type seems to be Finnish.
+\tit{valita} `choose' takes a partitive object
+
+\ex. Valitsen mista sina piddt.
+choose-I.el what-el you like-you.part
+'I choose what you like.'
+
+\tit{pitää} `like' takes elative objects
+
+\exg. *Pidan mista sind valitset.\\
+like-I.part what-el you choose-you.el\\
+`I like what you choose.'
+
+\exg. *Pidan mita sind valitset.\\
+like-I.part what-el you choose-you.el\\
+`I like what you choose.'
+
+\phantom{x}
+}
+
 
 
 \section{Only external case allowed}\label{sec:pattern-iii}
