--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -152,7 +152,7 @@ Throughout this chapter, I discuss the exact feature content of light heads and 
 The chapter is structured as follows.
 First, I discuss the relative pronoun. I start by decomposing it into the two morphemes I showed in Figure \ref{fig:rel-lh-mg}. Then I show which features each of the morphemes corresponds to. I illustrate how different morphemes are combined into the internal syntax in Figure \ref{fig:rel-lh-mg}.
 Then I discuss the light head. I argue that Modern German headless relatives are derived from a type of light-headed relative clause that does not surface in the language. I show that the light head corresponds to one of the morphemes of the relative pronoun (the \tsc{k}P in Figure \ref{fig:rel-lh-mg}).
-Finally, I compare the constituents of the light head and the relative pronoun. I show that the light head can be deleted when the internal case matches the external case or when the internal case is more complex than the external case. When the external case is more complex, I show that none of the elements can be deleted.
+Finally, I compare the internal syntax of the light head and the relative pronoun. I show that the light head can be deleted when the internal case matches the external case or when the internal case is more complex than the external case. When the external case is more complex, I show that none of the elements can be deleted.
 
 
 \section{The Modern German relative pronoun}\label{sec:mg-rel}
@@ -239,7 +239,7 @@ When the relative pronoun is the dative, the \tsc{k}P consists of the features \
 \end{forest}
 \end{adjustbox}
 
-I discuss two relative pronouns: the animate accusative and the animate dative. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-mg}. I show them in \ref{ex:mg-rels}.
+I discuss two relative pronouns: the animate accusative and the animate dative. These are the two forms that I compare the internal syntax of in Section \ref{sec:comparing-mg}. I show them in \ref{ex:mg-rels}.
 
 \ex.\label{ex:mg-rels}
 \ag. we-n\\
@@ -344,7 +344,7 @@ Therefore, I propose that actually two pronominal features are present: \tsc{ref
 I assume that clitics lack the features \tsc{ref} (which corresponds to the LP in \pgcitealt{cardinaletti1994}{61}) and the feature Σ. Strong pronouns have, in addition to \tsc{ref} and Σ, another feature (C in terms of \pgcitealt{cardinaletti1994}{61}).
 }
 
-I give the lexical entries for \tit{n} and \tit{m} in \ref{ex:mg-entry-nm}.
+I give the lexical entries for \tit{n} and \tit{m} in \ref{ex:mg-entries-nm}.
 The \tit{n} is the accusative animate singular, so it spells out the features \tsc{ref}, \tsc{cl}, \tsc{an}, \tsc{ind}, \ac{f}1 and \tsc{f}2. The \tit{m} is the dative animate singular, so it spells out the features that the \tit{n} spells out plus \ac{f}3.
 
 \ex.\label{ex:mg-entries-nm}
@@ -429,7 +429,7 @@ Consider Table \ref{tbl:mg-paradigm-dem} and Table \ref{tbl:mg-paradigm-wh-rels-
 \end{table}
 
 The morpheme \tit{we} combines with the same endings as the morpheme \tit{de} does in demonstrative pronouns (or relative pronouns in headed relatives).\footnote{
-Note that \tsc{wh}-relative pronouns, unlike the demonstratives, do not have feminine and plural forms, and \tsc{wh}-relative pronouns do not. As far as I know, this holds for all relative pronouns in languages of the internal-only type (cf. also for Finnish, even though it makes a lot of morphological distinctions) and of the matching type. Relative pronouns in languages of the unrestricted type do inflect for feminine and plural, as well as always-external languages. In Chapter \ref{ch:discussion} I return to this observation in relation to the always-external languages.}
+Note that \tsc{wh}-relative pronouns, unlike the demonstratives, do not have feminine and plural forms, and \tsc{wh}-relative pronouns do not. As far as I know, this holds for all relative pronouns in languages of the internal-only type (cf. also for Finnish, even though it makes a lot of morphological distinctions) and of the matching type. Relative pronouns in languages of the unrestricted type do inflect for feminine and plural, as well as always-external languages.}
 This identifies the \tit{de} and, more importantly for the discussion here, the \tit{we} as a separate morpheme.\footnote{
 It is also possible to analyze \tit{we} as two separate morphemes: \tit{w} and \tit{e}. This further decomposition would not make a difference for the analysis I propose here. What is crucial is that phi and case features correspond to a single morpheme and the other part has its own morpheme or morphemes.
 }\footnote{
@@ -1189,7 +1189,7 @@ To summarize, I decomposed the relative pronoun into the two morphemes: \tit{we}
 
 \section{The Modern German (extra) light head}\label{sec:light-mg}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is a constituent that is contained within other. In the introduction of this chapter, I claimed that the internal syntax of light heads in Modern German looks as shown in \ref{ex:mg-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is a constituent that is contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Modern German looks as shown in \ref{ex:mg-lh-complex}.
 
 \ex.\label{ex:mg-lh-complex}
 \begin{forest} boom
@@ -1369,7 +1369,7 @@ I do not see right away how the extra light head in headless relatives could enc
 Jan hugs \tsc{elh}.\tsc{an}.\tsc{acc} \tsc{rp}.\tsc{an}.\tsc{acc} he likes\\
 `Jan hugs who he likes.'\label{ex:mg-real-base}
 
-In the remainder of this section, I discuss the two extra light heads that I compare the constituents of in Section \ref{sec:comparing-mg}. They are the accusative animate and the dative animate, shown in \ref{ex:mg-lhs}.
+In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-mg}. They are the accusative animate and the dative animate, shown in \ref{ex:mg-lhs}.
 
 \ex.\label{ex:mg-lhs}
 \ag. n\\
@@ -1518,14 +1518,14 @@ fit to=tree]{};
 ]
 \end{forest}
 
-In sum, Modern German headless relatives are derived from a the light-headed relative with an extra light head. This extra light head is spelled out by a single phi and case feature portmanteau. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative clause.
+In sum, Modern German headless relatives are derived from a light-headed relative with an extra light head. This extra light head is spelled out by a single phi and case feature portmanteau. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative pronoun.
 
 % At first sight it seems like \citet{fuss2014} discuss a exception to this claim, namely headless relatives with \tsc{d}-pronouns. However, they claim that these headless relatives are actually light-headed relatives in which one of two syncretic elements is deleted by haplology.
 
 
-\section{Comparing Modern German constituents}\label{sec:comparing-mg}
+\section{Comparing light heads and relative pronouns}\label{sec:comparing-mg}
 
-In this section, I compare the constituents of extra light heads to those of relative pronouns in Modern German. This is the worked out version of the comparisons in Section \ref{sec:basic-internal}. What is different here is that I show the comparison for Modern German specifically, and that the content of the constituents that are being compared are motivated earlier in this chapter.
+In this section, I compare the internal syntax of extra light heads to the internal syntax of relative pronouns in Modern German. This is the worked out version of the comparisons in Section \ref{sec:basic-internal}. What is different here is that I show the comparison for Modern German specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
 
 I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
