--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -188,7 +188,7 @@ The chapter is structured as follows.
 First, I discuss the relative pronoun. I decompose it into the three morphemes I showed in Figure \ref{fig:rel-lh-pol}. Then I show which features each of the morphemes corresponds to.
 Then I discuss the light head. I argue that Polish headless relatives are, just as Modern German headless relatives, derived from a type of light-headed relative clause that does not surface in the language. I show that the light head corresponds to one of the morphemes of the relative pronoun (the \tsc{k}P in Figure \ref{fig:rel-lh-pol}).
 Importantly, the features that form the Polish light head and relative pronoun are the same ones that form the Modern German light head and relative pronoun. The only difference between the two languages is how the features are spelled out.
-Finally, I compare the constituents of the light head and the relative pronoun. I show that the light head can only be deleted when the internal case matches the external case. When the internal and external case differ, none of the elements can be deleted.
+Finally, I compare the internal syntax of the light head and the relative pronoun. I show that the light head can only be deleted when the internal case matches the external case. When the internal and external case differ, none of the elements can be deleted.
 
 
 \section{The Polish relative pronoun}\label{sec:pol-rel}
@@ -290,7 +290,7 @@ I show the complete structure that I work towards in this section in \ref{ex:pol
   \end{forest}
   \end{adjustbox}
 
-I discuss two relative pronouns: the animate accusative and the animate dative. These are the two forms that I compare the constituents of in Section \ref{sec:comparing-polish}. I show them in \ref{ex:pol-rels}.
+I discuss two relative pronouns: the animate accusative and the animate dative. These are the two forms that I compare the internal syntax of in Section \ref{sec:comparing-polish}. I show them in \ref{ex:pol-rels}.
 
 \ex.\label{ex:pol-rels}
 \ag. k-o-go\\
@@ -1139,7 +1139,7 @@ To summarize, I decomposed the relative pronoun into three morphemes: \tit{k}, \
 
 \section{The Polish extra light head}\label{sec:pol-elh}
 
-I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is a constituent that is contained within other. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
+I have suggested that headless relatives are derived from light-headed relatives. The light head or the relative pronoun can be deleted when either of them is a constituent that is contained within the other one. In the introduction of this chapter, I claimed that the internal syntax of light heads in Polish looks as shown in \ref{ex:pol-lh-complex}.
 
 \ex.\label{ex:pol-lh-complex}
 \begin{forest} boom
@@ -1248,7 +1248,7 @@ The second argument against the existing light-headed relatives being the source
 Just like in Modern German, Polish headless relatives can be analyzed as either universal or definite \pgcitep{citko2004}{103}.
 Light-headed relatives, such as the one in \ref{ex:pol-light-headed}, only have the definite interpretation.
 
-In the remainder of this section, I discuss the two extra light heads that I compare the constituents of in Section \ref{sec:comparing-polish}. The are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
+In the remainder of this section, I discuss the two extra light heads that I compare the internal syntax of in Section \ref{sec:comparing-polish}. The are the accusative animate and the dative animate, shown in \ref{ex:pol-elhs}.
 % \footnote{
 % It is also possible that the strong pronoun is syncretic with the extra light head and that the extra light head is actually also spelled out as \tit{jego}/\tit{jemu}. This would mean that the strong extra light head consists of even more than two morphemes. For my proposal, it is important to show that the extra light head consists of at least two morphemes, one of which spells out case features. It works equally well when the non-case part of the structure actually consists of more one morpheme. I continue working out a proposal in which the extra light head is bimorphemic.
 % }
@@ -1461,12 +1461,12 @@ This phrase is contained in the lexical tree in \ref{ex:pol-entry-mu-rep-lh}, so
 \end{forest}
 \end{adjustbox}
 
-In sum, Polish headless relatives are derived from a the light-headed relative with an extra light head, just like they are in Modern German. The extra light head is spelled out a lexical entry that spells out phi features and another one that spells out case features. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative clause.
+In sum, Polish headless relatives are derived from a light-headed relative with an extra light head, just like they are in Modern German. The extra light head is spelled out a lexical entry that spells out phi features and another one that spells out case features. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative pronoun.
 
 
-\section{Comparing Polish constituents}\label{sec:comparing-polish}
+\section{Comparing light heads and relative pronouns}\label{sec:comparing-polish}
 
-In this section, I compare the constituents of extra light heads to those of relative pronouns in Polish. This is the worked out version of the comparisons in Section \ref{sec:basic-matching}. What is different here is that I show the comparison for Polish specifically, and that the content of the constituents that are being compared are motivated earlier in this chapter.
+In this section, I compare the internal syntax of extra light heads to the internal syntax of relative pronouns in Polish. This is the worked out version of the comparisons in Section \ref{sec:basic-matching}. What is different here is that I show the comparison for Polish specifically, and that the content of the internal syntax that is being compared is motivated earlier in this chapter.
 
 I give three examples, in which the internal and external case vary.
 I start with an example with matching cases, in which the internal and the external case are both accusative.
