--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -1189,6 +1189,7 @@ Another option to get a relative pronoun deleted is to let the relative features
   ]
 \end{forest}
 
+This is in a nutshell what I assume the analysis for Gothic to be.
 In this chapter and in Chapter \ref{ch:deriving-unrestricted} (in which I work out the proposal for Old High German) I only discuss the situation in which the relative pronoun as a whole is a constituent that is formally contained within the light head, and the relative pronoun is deleted.}
 
 \begin{figure}[htbp]
